added the possibility to accept and deny a passenger
